# ZMQ_Quest

./: README.md
Sub/: CMakeLists.txt  main.cpp
ZMQ_opdracht/: CMakeLists.txt  main.cpp  server.cpp  server.h  server.h.autosave
ZMQ_opdracht_PyClient/: clientTest.py
ZMQ_opdracht_client/: CMakeLists.txt  client.cpp  client.h  main.cpp
build-ZMQ_opdracht-Imported_Kit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-ZMQ_opdracht-Imported_Kit-Debug/.cmake/api/v1/reply/: cache-v2-b361122614b1be2c46e5.json  cmakeFiles-v1-49cb7e383d5ca735ecdd.json  codemodel-v2-f12b3d779cb2b8444b3f.json  index-2022-03-22T09-07-32-0615.json  target-ZMQ_opdracht-Debug-439fd57a7720288fbe33.json
build-ZMQ_opdracht_client-Imported_Kit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-ZMQ_opdracht_client-Imported_Kit-Debug/.cmake/api/v1/reply/: cache-v2-f0e4a1bb8a70d6276b4a.json  cmakeFiles-v1-347deea7afde1f4f2c70.json  codemodel-v2-e8c247b1e01028cfc5d9.json  index-2022-03-22T09-28-37-0404.json  target-ZMQ_opdracht_client-Debug-0605c12de6cd7744abb0.json
